# Imagenet-1k-Training

./: .gitignore  README.md  dataset.pem  examples.sh  imagenet.pem  imagenetreport.py  plotcam.py  pyproject.toml  remote.sh  requirements.txt  uv_dep.sh
imagenet_inference/: Dockerfile  requirements.txt
imagenet_inference/app/: main.py
notebooks/: ImageNet_Data_Viz.ipynb
old/: data.py  train.py  train_v2.py
setup_imagenet_sanpshot_sh/: README.md  ariia_src_install.sh  configure_aws.txt  create_volume.sh  download_imagenet.sh  extract_and_organize.sh  mount.sh  persist.sh  setup_tools.sh  use_snapshot.sh
src/: config.py  data_s3.py  data_with_aug.py  distributed.py  download_kaggle_dataset.py  lr_finder.py  model.py  optimizer.py  train_g4.dn_12xlarge.py  train_utils.py  upload_to_s3.py
