[project]
name = "image-net-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albucore>=0.0.33",
    "albumentations>=1.4.15",
    "annotated-types>=0.7.0",
    "bleach>=6.2.0",
    "certifi>=2025.10.5",
    "charset-normalizer>=3.4.4",
    "contourpy>=1.3.3",
    "cycler>=0.12.1",
    "filelock>=3.20.0",
    "fonttools>=4.60.1",
    "fsspec>=2025.9.0",
    "idna>=3.11",
    "jinja2>=3.1.6",
    "kaggle>=1.7.4.5",
    "kiwisolver>=1.4.9",
    "markupsafe>=3.0.3",
    "matplotlib>=3.10.7",
    "mpmath>=1.3.0",
    "networkx>=3.5",
    "numpy>=2.3.4",
    "opencv-python-headless>=4.11.0.86",
    "packaging>=25.0",
    "pillow>=12.0.0",
    "protobuf>=6.33.0",
    "pydantic>=2.12.2",
    "pydantic-core>=2.41.4",
    "pyparsing>=3.2.5",
    "python-dateutil>=2.9.0.post0",
    "python-slugify>=8.0.4",
    "pytorch-gpu>=0.0.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "scipy>=1.16.2",
    "setuptools>=80.9.0",
    "simsimd>=6.5.3",
    "six>=1.17.0",
    "stringzilla>=4.2.1",
    "sympy>=1.14.0",
    "text-unidecode>=1.3",
    "torch>=2.9.0",
    "torch-lr-finder>=0.2.2",
    "torchaudio>=2.9.0",
    "torchsummary>=1.5.1",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
    "triton>=3.5.0",
    "typing-extensions>=4.15.0",
    "typing-inspection>=0.4.2",
    "urllib3>=2.5.0",
    "webencodings>=0.5.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
]
